<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity"
    android:background="@drawable/helpback">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/blue"
        android:src="@drawable/x"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="17dp"
        />

    <LinearLayout
        android:id="@+id/linearL1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="124dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/doc" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_marginBottom="18dp"
            android:src="@drawable/browser" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/language2" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/iconsjava" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/iconandroid" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:src="@drawable/iconsjavascript" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/iconshtml" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/iconscss" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearL2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearL1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingEnd="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_doc"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_browser"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_language"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_planguage"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_android"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_planguage"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_htmlcss"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_htmlcss"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"/>




    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="11:00 PM"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="353dp"
        tools:layout_editor_absoluteY="717dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="9dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>